RESOLVED FIXED128566
Redundant assertion in SpeculativeJIT ReallocatePropertyStorage
https://bugs.webkit.org/show_bug.cgi?id=128566
Summary Redundant assertion in SpeculativeJIT ReallocatePropertyStorage
Matthew Mirman
Reported 2014-02-10 16:50:23 PST
patch coming.
Attachments
Removed an excess assert from SpeculativeJIT (1.58 KB, patch)
2014-02-10 16:55 PST, Matthew Mirman
no flags
Matthew Mirman
Comment 1 2014-02-10 16:55:23 PST
Created attachment 223770 [details] Removed an excess assert from SpeculativeJIT
WebKit Commit Bot
Comment 2 2014-02-10 17:36:47 PST
Comment on attachment 223770 [details] Removed an excess assert from SpeculativeJIT Clearing flags on attachment: 223770 Committed r163843: <http://trac.webkit.org/changeset/163843>
WebKit Commit Bot
Comment 3 2014-02-10 17:36:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.