Removes the inline assert from SpeculativeJIT's ReallocatePropertyStorage https://bugs.webkit.org/show_bug.cgi?id=128566

Patch by Matthew Mirman <mmirman@apple.com> on 2014-02-10
Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileReallocatePropertyStorage):

Canonical link: https://commits.webkit.org/146596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163843 268f45cc-cd09-0410-ab3c-d52691b4dbfc